[gd_scene load_steps=5 format=3 uid="uid://dvjkkex6w162i"]

[ext_resource type="Script" path="res://src/upgrade/upgrade_shop.gd" id="1_tdv4b"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_8i71s"]
[ext_resource type="Texture2D" uid="uid://i3hxrkvy84y4" path="res://assets/custom/Star.png" id="2_jv3eb"]
[ext_resource type="PackedScene" uid="uid://cudyk4owfvepm" path="res://src/tutorial/explanation.tscn" id="4_yruyp"]

[node name="UpgradeShop" type="Node2D"]
z_index = 2
script = ExtResource("1_tdv4b")

[node name="ClickOutButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1920, 1080)
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Panel" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_8i71s")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Prompt" type="Label" parent="Panel/VBox/HBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Choose an Upgrade"

[node name="Close" type="Button" parent="Panel/VBox/HBox"]
layout_mode = 2
text = "Close"

[node name="ExpandFarm" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Expand Farm"

[node name="Energy" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Energy Fragment
"

[node name="Draw" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Card Fragment
"

[node name="Capacity" type="Button" parent="Panel/VBox"]
visible = false
layout_mode = 2
disabled = true
text = "+2 Capacity"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Skip" type="Button" parent="Panel/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skip"

[node name="Label" type="Label" parent="Panel/VBox/HBoxContainer"]
layout_mode = 2
text = "+3"

[node name="TextureRect" type="TextureRect" parent="Panel/VBox/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_jv3eb")
expand_mode = 2

[node name="Explanation" parent="." instance=ExtResource("4_yruyp")]
position = Vector2(506, 5)

[connection signal="pressed" from="ClickOutButton" to="." method="_on_click_out_button_pressed"]
[connection signal="pressed" from="Panel/VBox/HBox/Close" to="." method="_on_click_out_button_pressed"]
[connection signal="pressed" from="Panel/VBox/ExpandFarm" to="." method="expand_up"]
[connection signal="pressed" from="Panel/VBox/Energy" to="." method="_on_energy_pressed"]
[connection signal="pressed" from="Panel/VBox/Draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="Panel/VBox/HBoxContainer/Skip" to="." method="_on_skip_pressed"]
